# Serial-CLI

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
include/: BuildOptionsParser.h  CmdParser.h  EnvHandler.h  GPIO.h  Serial.h  Timer.h  UART2.h  USART.h  buildOptions.h  customTypes.h  myStoi.h  timerInterrupts.h
src/: BuildOptionsParser.cpp  CmdParser.cpp  EnvHandler.cpp  GPIO.cpp  Interrupts.cpp  Serial.cpp  Timer.cpp  UART2.cpp  USART.cpp  main.cpp  timerInterrupts.cpp
test/: set-led-test.py
